# GoldenSunCompression

./: .gitignore  LICENSE  LICENSE.md  README.md  golden sun tutorial in progress.txt
Arena GFX/: .arena-lzss.hs.swn  .arena-lzss.hs.swo  arena-lzss-decode.hs  arena-lzss.hi  arena-lzss.hs  entriesMaster.txt  test.hs
gs-huffman/: .gsHuffman.hs.swo  .gsHuffman.hs.swp  Golden Sun (UE) Script.txt  Golden Sun - The Lost Age (UE) Script.txt  README.md  codec.hs  gs-huffman.hs  gsHuffman.hi  gsHuffman.hs  gsHuffmanBkUp.hs  textCode.idb
gs-huffman/c decoder/: Paths in tree.xlsx  decode.c  decodeBkUp.c  decodeTmp.c
gs-huffman/gs2/: .gsHuffman2.hs.swo  gsHuffman2.hi  gsHuffman2bkup.hs  notes.txt  textCodeGs2.idb
gs-huffman/gs2/c decoder/: decode.c  logMaster.txt  run.bat
gs-lzss/: Codec.hs  LICENSE.md  README.md  gs-lzss.hs  runPressStartGfx.bat  run_batch.bat
gsLzssBitFlag/: README.md  gsLzssBitFlag.cabal  runArenaLabelsGfx.bat  stack.yaml
gsLzssBitFlag/.stack-work/install/8851aa27/flag-cache/: bitstream-0.2.0.4-4d1ef344f7f81dc22a340ffb428bec60  gsLzssBitFlag-0.1.0.0-698fda8bbaf74cfb46487093f9efbc66  vector-0.10.12.3-1edaca612586bef53833689fd303e8ab
gsLzssBitFlag/.stack-work/install/8851aa27/lib/x86_64-windows-ghc-7.10.3/gsLzssBitFlag-0.1.0.0-8vGbSWCrm2B42KOg9zWlKI/: Codec.hi
gsLzssBitFlag/.stack-work/install/8851aa27/pkgdb/: bitstream-0.2.0.4-4d1ef344f7f81dc22a340ffb428bec60.conf  gsLzssBitFlag-0.2.0.0-8c5859cb30a5d8eb3db394fe6f547ee5.conf  package.cache  vector-0.10.12.3-1edaca612586bef53833689fd303e8ab.conf
gsLzssBitFlag/app/: Main.hs
gsLzssBitFlag/src/: Codec.hs
gsLzssByteFlags/: LICENSE.md  README.md  gsLzssByteFlags.cabal  runPressStartGfx.bat  run_batch.bat
gsLzssByteFlags/app/: Main.hs
(+27 files in other folders)
