name:                gsLzssByteFlags
version:             0.4.1.0
synopsis:            Utility for GBA Golden Sun LZSS scheme with 8 flags, clustered in byte before compressed block.
description:         Please see README.md
homepage:            https://github.com/romhack/GoldenSunCompression/
license:             MIT
license-file:        LICENSE.md
author:              Griever
maintainer:          Griever.Magicteam@gmail.com
copyright:           2016 Griever
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Codec
  build-depends:       base >= 4.7 && < 5
                     , stringsearch
                     , bitstream
                     , bytestring
                     , mtl
                     , split

  default-language:    Haskell2010

executable gsLzssByteFlags
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gsLzssByteFlags
                     , bitstream
                     , bytestring
                     , directory
                     , binary
                     , mtl


  default-language:    Haskell2010

test-suite gsLzssByteFlags-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gsLzssByteFlags
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/romhack/GoldenSunCompression/gsLzssByteFlags
